# platformer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
assets/: materials.toml
assets/scenes/: castle.toml  castle.txt  city.txt
shaders/: checkpoint.wgsl  ellipse.wgsl  exit.wgsl  gravity-zone.wgsl  header.wgsl  jump-flood.wgsl  lava.wgsl  lighting.wgsl  player.wgsl  quad.wgsl  radial-gravity-zone.wgsl  text.wgsl
src/: application.cpp  application.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  data-structures.cpp  data-structures.hpp  font-atlas.cpp  font-atlas.hpp  input.cpp  input.hpp  jump-flood.cpp  jump-flood.hpp  lighting.cpp  lighting.hpp  log.cpp  log.hpp  main.cpp  material.cpp  material.hpp  math.cpp  math.hpp  memory-arena.cpp  memory-arena.hpp  menu.cpp  menu.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader-library.cpp  shader-library.hpp  transform.cpp  (+3 more)
tests/: array.test.cpp  memory-arena.test.cpp  stable-array.test.cpp  string.test.cpp
